# wealth-tracker

./: .gitignore  README.md  finclaw_sdk-0.1.0-py3-none-any.whl  pyproject.toml
references/: support_category.md
skills/: SKILL.md
skills/references/: fin_schema.md
src/wealth_tracker/: __init__.py  auth.py  client.py  config.py  exceptions.py  models.py
